<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/icon_explore"
            android:title="@string/explore" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/icon_recipes"
            android:title="@string/my_recipes" />
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/icon_activity"
            android:title="@string/activity" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/icon_setting"
            android:title="@string/settings" />
    </group>

</menu>
