<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f5f7"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="294dp"
        android:layout_height="333dp"
        android:background="@drawable/shadow"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">

        <EditText
            android:layout_width="258dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="83dp"
            android:background="@drawable/shadow_edit"
            android:hint="@string/email" />

        <EditText
            android:layout_width="258dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:background="@drawable/shadow_edit"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnGo"
            android:layout_width="260dp"
            android:layout_height="53dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="57dp"
            android:background="@drawable/shadow_button1"
            android:text="@string/go"
            android:textColor="@color/colorCharacter"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>