<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f5f7"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="295dp"
        android:layout_height="402dp"
        android:background="@drawable/shadow"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="79dp"
            android:layout_height="79dp"
            android:layout_marginStart="108dp"
            android:layout_marginLeft="108dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shadow_add"
            android:gravity="center">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:src="@drawable/icon_add"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <EditText
            android:layout_width="258dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="19dp"
            android:background="@drawable/shadow_edit"
            android:hint="@string/email"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:layout_width="258dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="17dp"
            android:background="@drawable/shadow_edit"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:layout_width="258dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="17dp"
            android:background="@drawable/shadow_edit"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:singleLine="true"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/sign"
            android:layout_width="260dp"
            android:layout_height="53dp"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/shadow_button1"
            android:text="@string/go"
            android:textColor="@color/colorCharacter"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>